# event-detection

./: .gitignore  Demo.ipynb  demo.py  env.yml  pyproject.toml
event_detection/: __init__.py  dataset.py  extractor.py  preproc.py
src/: dataset.py  models.py  preproc.py
